# intelliparse

./: README.md  pyproject.toml
src/intelliparse/: types.py
